# tesstrain

./: .gitignore  README.md  extension_change.py  generate_tif.py  main.py  name_change.py  pyproject.toml  test.ipynb  test_tesseract.py  train_tesseract.py
results/: 1.txt  1_trustsoft.txt
src/tesstrain/: language_specific.py
