[project]
name = "tesstrain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colorama==0.4.6",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "debugpy==1.8.15",
    "fonttools==4.59.0",
    "ipykernel>=6.30.0",
    "kiwisolver==1.4.8",
    "matplotlib==3.10.3",
    "numpy==2.3.2",
    "packaging==25.0",
    "pandas==2.3.1",
    "pillow==11.3.0",
    "pyparsing==3.2.3",
    "pytesseract==0.3.13",
    "python-bidi>=0.4",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "six==1.17.0",
    "tqdm==4.67.1",
    "tzdata==2025.2",
]
